// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Reporter Dashboard Reporter with certification requests 1`] = `
<Relay(DefaultLayout)
  allowedGroups={
    Array [
      "User",
    ]
  }
  help={
    Object {
      "helpMessage": "An operator is an organisation",
      "title": "What is an Operator",
    }
  }
  session={
    Object {
      " $fragmentRefs": Object {
        "defaultLayout_session": true,
      },
      "ciipUserBySub": Object {
        "certificationRequests": Object {
          "edges": Array [
            Object {
              "node": Object {
                "id": "1",
              },
            },
          ],
        },
        "id": "ciip-reporter@mailinator.com",
        "rowId": 6,
      },
    }
  }
  showSubheader={true}
  title="My Operators"
>
  <Row
    noGutters={false}
  >
    <Col
      md={
        Object {
          "span": 8,
        }
      }
    >
      <Relay(OrganisationsComponent)
        confirmOrg={false}
        flagCertRequests={true}
        handleContextChange={[Function]}
        handleInputChange={[Function]}
        handleOrgChange={[Function]}
        handleOrgConfirm={[Function]}
        orgInput=""
        query={
          Object {
            " $fragmentRefs": Object {
              "Organisations_query": true,
            },
            "session": Object {
              " $fragmentRefs": Object {
                "defaultLayout_session": true,
              },
              "ciipUserBySub": Object {
                "certificationRequests": Object {
                  "edges": Array [
                    Object {
                      "node": Object {
                        "id": "1",
                      },
                    },
                  ],
                },
                "id": "ciip-reporter@mailinator.com",
                "rowId": 6,
              },
            },
          }
        }
        selectedOrg={null}
      />
    </Col>
    <Col
      md={4}
    >
      <h5
        style={
          Object {
            "marginBottom": "20px",
          }
        }
      >
        How to apply for CIIP
      </h5>
      <div
        className="how-to-apply"
      >
        <ListGroup
          horizontal={null}
          variant={null}
        >
          <ListGroupItem
            active={false}
            disabled={false}
            variant={null}
          >
            <strong>
              Step 1:
            </strong>
            <br />
            Request access to one or more Operators.
          </ListGroupItem>
          <ListGroupItem
            active={false}
            disabled={false}
            variant={null}
          >
            <strong>
              Step 2:
            </strong>
            <br />
            CIIP administrators will approve your request.
             
          </ListGroupItem>
          <ListGroupItem
            active={false}
            disabled={false}
            variant={null}
          >
            <strong>
              Step 3:
            </strong>
            <br />
            Once approved, you can view all the facilities for the Operator.
          </ListGroupItem>
          <ListGroupItem
            active={false}
            disabled={false}
            variant={null}
          >
            <strong>
              Step 4:
            </strong>
            <br />
            You can apply for CIIP for each facility.
          </ListGroupItem>
        </ListGroup>
      </div>
    </Col>
  </Row>
</Relay(DefaultLayout)>
`;

exports[`Reporter Dashboard Reporter with no certification requests 1`] = `
<Relay(DefaultLayout)
  allowedGroups={
    Array [
      "User",
    ]
  }
  help={
    Object {
      "helpMessage": "An operator is an organisation",
      "title": "What is an Operator",
    }
  }
  session={
    Object {
      " $fragmentRefs": Object {
        "defaultLayout_session": true,
      },
      "ciipUserBySub": Object {
        "certificationRequests": Object {
          "edges": Array [],
        },
        "id": "ciip-reporter@mailinator.com",
        "rowId": 6,
      },
    }
  }
  showSubheader={true}
  title="My Operators"
>
  <Row
    noGutters={false}
  >
    <Col
      md={
        Object {
          "span": 8,
        }
      }
    >
      <Relay(OrganisationsComponent)
        confirmOrg={false}
        flagCertRequests={false}
        handleContextChange={[Function]}
        handleInputChange={[Function]}
        handleOrgChange={[Function]}
        handleOrgConfirm={[Function]}
        orgInput=""
        query={
          Object {
            " $fragmentRefs": Object {
              "Organisations_query": true,
            },
            "session": Object {
              " $fragmentRefs": Object {
                "defaultLayout_session": true,
              },
              "ciipUserBySub": Object {
                "certificationRequests": Object {
                  "edges": Array [],
                },
                "id": "ciip-reporter@mailinator.com",
                "rowId": 6,
              },
            },
          }
        }
        selectedOrg={null}
      />
    </Col>
    <Col
      md={4}
    >
      <h5
        style={
          Object {
            "marginBottom": "20px",
          }
        }
      >
        How to apply for CIIP
      </h5>
      <div
        className="how-to-apply"
      >
        <ListGroup
          horizontal={null}
          variant={null}
        >
          <ListGroupItem
            active={false}
            disabled={false}
            variant={null}
          >
            <strong>
              Step 1:
            </strong>
            <br />
            Request access to one or more Operators.
          </ListGroupItem>
          <ListGroupItem
            active={false}
            disabled={false}
            variant={null}
          >
            <strong>
              Step 2:
            </strong>
            <br />
            CIIP administrators will approve your request.
             
          </ListGroupItem>
          <ListGroupItem
            active={false}
            disabled={false}
            variant={null}
          >
            <strong>
              Step 3:
            </strong>
            <br />
            Once approved, you can view all the facilities for the Operator.
          </ListGroupItem>
          <ListGroupItem
            active={false}
            disabled={false}
            variant={null}
          >
            <strong>
              Step 4:
            </strong>
            <br />
            You can apply for CIIP for each facility.
          </ListGroupItem>
        </ListGroup>
      </div>
    </Col>
  </Row>
</Relay(DefaultLayout)>
`;
